include/vcl/font/Feature.hxx
@@ -59,7 +59,7 @@ private:
     TranslateId m_pDescriptionID;
     OUString m_sNumericPart;
     uint32_t m_nCode;
-    uint32_t m_nDefault;
+    int32_t m_nDefault;
     FeatureParameterType m_eType;
     // the index of the parameter defines the enum value, string is the description
     std::vector<FeatureParameter> m_aEnumParameters;
@@ -70,7 +70,7 @@ public:
                       FeatureParameterType eType = FeatureParameterType::BOOL,
                       std::vector<FeatureParameter>&& rEnumParameters
                       = std::vector<FeatureParameter>{},
-                      uint32_t nDefault = 0);
+                      int32_t nDefault = -1);
     FeatureDefinition(uint32_t nCode, TranslateId pDescriptionID,
                       OUString aNumericPart = OUString());
     FeatureDefinition(uint32_t nCode, TranslateId pDescriptionID,
@@ -80,7 +80,7 @@ public:
     uint32_t getCode() const;
     OUString getDescription() const;
     FeatureParameterType getType() const;
-    uint32_t getDefault() const;
+    int32_t getDefault() const;
 
     operator bool() const;
 };
